--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,15 @@ sudo: required
 language: node_js
 node_js:
 - "8.11.3"
+python: 
+  - '3.5'
+addons:
+  apt:
+    sources:
+      - llvm-toolchain-trusty-5.0
+    packages:
+      - clang-5.0
+      - libclang-5.0-dev
 
 before_install:
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
@@ -14,10 +23,14 @@ install:
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
 - git clone https://github.com/devosoft/Empirical ../Empirical
 - git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && git pull && ./emsdk install latest && ./emsdk activate latest && . ./emsdk_env.sh && cd ..
+- git clone https://github.com/emilydolson/force-cover ../force_cover && cd ../force-cover && make force_cover
+- pip install --user codecov
 
 script:
 - make test
 
 after_success: 
+- cp ../force_cover/force_cover .
+- cp ../force_cover/fix_coverage.py .
 - make coverage
 - curl -s https://codecov.io/bash | bash
