--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,11 @@
 dist: xenial
 sudo: required
 
-language: node_js
+language: cpp
 node_js:
 - "8.11.3"
 python: 
   - '3.5'
-addons:
-  apt:
-    sources:
-      - llvm-toolchain-trusty-6.0
-    packages:
-      - clang-6.0
-      - libclang-6.0-dev
 
 before_install:
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
@@ -25,6 +18,13 @@ install:
 - git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && git pull && ./emsdk install latest && ./emsdk activate latest && . ./emsdk_env.sh && cd ..
 - git clone https://github.com/emilydolson/force-cover ../force_cover && cd ../force-cover && make force_cover
 - pip install --user codecov
+addons:
+  apt:
+    sources:
+      - llvm-toolchain-trusty-7
+    packages:
+      - clang-7
+      - libclang-7-dev
 
 script:
 - make test
