Force_cover needs to happen after clang gets installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ install:
 - sudo apt-get install -qq g++-8
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
 - git clone https://github.com/devosoft/Empirical ../Empirical
-- git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && git pull && ./emsdk install latest && ./emsdk activate latest && . ./emsdk_env.sh && cd ..
-- git clone https://github.com/emilydolson/force-cover && cd force-cover && make force_cover
+#- git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && git pull && ./emsdk install latest && ./emsdk activate latest && . ./emsdk_env.sh && cd ..
 - pip install --user codecov
 addons:
   apt:
@@ -30,6 +29,7 @@ script:
 - make test
 
 after_success: 
+- git clone https://github.com/emilydolson/force-cover && cd force-cover && make force_cover CXX=clang++-7
 - ls
 - ls ..
 - cp force_cover/force_cover .
