Install zlib so coverage works

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 - sudo apt-get update -qq
 
 install:
-- sudo apt-get install -qq g++-8
+- sudo apt-get install -qq g++-8 zlibg
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
 - git clone https://github.com/devosoft/Empirical ../Empirical
 #- git clone https://github.com/emscripten-core/emsdk.git && cd emsdk && git pull && ./emsdk install latest && ./emsdk activate latest && . ./emsdk_env.sh && cd ..
@@ -22,7 +22,6 @@ addons:
     sources:
       - llvm-toolchain-trusty-7
     packages:
-      - zlib
       - clang-7
       - libclang-7-dev
 
